# PlaTwo

AP_PROJECT_PLATWO/: .gitignore  AP_PROJECT_PLATWO.pro  CMakeLists.txt  README.md  main.cpp
AP_PROJECT_PLATWO/Client/: Client.cpp  Client.h  Client.pro  Client.txt  Console.cpp  Console.h  Packet.cpp  Packet.h  User.cpp  User.h  main.cpp
AP_PROJECT_PLATWO/Client/resources/: resources.qrc
AP_PROJECT_PLATWO/Client/resources/qss/: main_menu.qss  theme.qss
AP_PROJECT_PLATWO/Client/src/Models/: GameSettings.h  room.cpp  room.h
AP_PROJECT_PLATWO/Client/src/Network/: client_manager.cpp  client_manager.h  network_constants.h
AP_PROJECT_PLATWO/Client/src/Ui/: Loginwindow.cpp  Loginwindow.h  Loginwindow.ui  MainMenuWindow.cpp  MainMenuWindow.h  editprofilepage.cpp  editprofilepage.h  editprofilepage.ui  forgotpasspage.cpp  forgotpasspage.h  forgotpasspage.ui  gamedetailpage.cpp  gamedetailpage.h  gamedetailpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainmenuwindow.ui  signuppage.cpp  signuppage.h  signuppage.ui
AP_PROJECT_PLATWO/Client/src/User/: user.h
AP_PROJECT_PLATWO/Server/: ClientHandler.cpp  ClientHandler.h  Console.h  Database.cpp  Database.h  Packet.h  PasswordHasher.cpp  PasswordHasher.h  RequestProcessor.cpp  RequestProcessor.h  Server.cpp  Server.h  Server.pro  Server.txt  User.h  UserService.cpp  UserService.h  Validator.cpp  Validator.h  json.hpp  main.cpp  users.db
AP_PROJECT_PLATWO/Server/src/Controller/: auth_manager.cpp  auth_manager.h
AP_PROJECT_PLATWO/Server/src/Game/: BoardModel.cpp  BoardModel.h  GameController.cpp  GameController.h  Player.cpp  Player.h
AP_PROJECT_PLATWO/SharedLibrary/: SharedLib.txt
AP_PROJECT_PLATWO/resources/: resources.qrc
AP_PROJECT_PLATWO/resources/qss/: theme.qss
AP_PROJECT_PLATWO/src/Controller/: auth_manager.cpp  auth_manager.h
AP_PROJECT_PLATWO/src/Storage/: storage_manager.cpp  storage_manager.h
AP_PROJECT_PLATWO/src/Ui/: Loginwindow.cpp  Loginwindow.h  Loginwindow.ui  forgotpasspage.cpp  forgotpasspage.h  forgotpasspage.ui  loginpage.cpp  loginpage.h  loginpage.ui  signuppage.cpp  signuppage.h  signuppage.ui
AP_PROJECT_PLATWO/src/User/: user.h
(+31 files in other folders)
